--- a/dev/less/themes.less
+++ b/dev/less/themes.less
@@ -37,7 +37,8 @@ body {
 
   /* --- THEME DARK --- */
 
-.theme-dark {
+.theme-dark,
+.theme-dark .stage {
   background-color: #000;
   color: #fff;
 }
