--- a/dev/less/variables-and-mixins.less
+++ b/dev/less/variables-and-mixins.less
@@ -11,10 +11,10 @@
 @media-desktop : ~"(min-width: 768px) and (max-width: 1199px)";
 // if > @tablet and < @large-desktop
 //@media (max-width: 767px)
-@media-tablet-p : ~"(min-width:481px) and (max-width: 768px)";
+@media-tablet-p : ~"(min-width:641px) and (max-width: 768px)";
 // if < @phone : 420px;
-@media-not-phone : ~"(min-width: 480px)";
-@media-phone : ~"(max-width: 480px)";
+@media-not-phone : ~"(min-width: 640px)";
+@media-phone : ~"(max-width: 640px)";
 
 .box-sizing(@val){
   -webkit-box-sizing: @val;
